render picture, youtube preview (wip)

--- a/static/2023.md
+++ b/static/2023.md
@@ -5,10 +5,9 @@
 ![picture](2023/birds.png)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-Duis
-aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 > tag a, tag b, tag c
@@ -20,10 +19,42 @@ occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim 
 [youtube](https://www.youtube.com/watch?v=dQw4w9WgXcQ)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-Duis
-aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 > tag c, super tag
+
+# Topic 3
+
+## 2023-07-14
+
+[youtube](https://www.youtube.com/watch?v=dQw4w9WgXcQ)
+
+Для систем проектирования инженерных сетей важно в первую очередь получить корректный результат, который не противоречит
+инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
+робототехники. 
+
+Модель кинематической цепи идеально описывает профиль подключения сантехнического прибора к трассе
+водоотведения, гарантирует точное позиционирование и соосность фитингов и труб. Не менее важным является способ
+представления системы так, чтобы инженеры разной квалификации могли легко и однозначно интерпретировать результаты
+расчётов. 
+
+Поэтому мы реализовали приложение, в центре которого 3D проекция трассы водоотведения с интерактивными
+элементами управления. Изменение параметров расчёта приводит к обновлению этой проекции в режиме реального времени. В
+итоге наше приложение уменьшает трудоёмкость проектирования сетей водоотведения.
+
+> разработка, хакатон, выступление, путешествие, игрострой
+
+# Topic 4
+
+## 2023-07-21
+
+![picture](2023/birds.png)
+
+Для систем проектирования инженерных сетей важно в первую очередь получить корректный результат, который не противоречит
+инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
+робототехники.
+
+> tag a, tag b, tag c
