--- a/static/2023.md
+++ b/static/2023.md
@@ -10,13 +10,13 @@ aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-> tag a, tag b, tag c
+> a, b, c
 
 # Topc 2
 
 ## 2023-08-23
 
-[youtube](https://www.youtube.com/watch?v=dQw4w9WgXcQ)
+[youtube](https://www.youtube.com/embed/qJ16vPIZpqc?si=AgNLJohMoRE9Z976&start=1202)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -24,13 +24,13 @@ aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-> tag c, super tag
+> tag, super
 
 # Topic 3
 
 ## 2023-07-14
 
-[youtube](https://www.youtube.com/watch?v=dQw4w9WgXcQ)
+[youtube](https://www.youtube.com/embed/qJ16vPIZpqc?si=AgNLJohMoRE9Z976&start=1202)
 
 Для систем проектирования инженерных сетей важно в первую очередь получить корректный результат, который не противоречит
 инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
@@ -57,4 +57,4 @@ occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim 
 инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
 робототехники.
 
-> tag a, tag b, tag c
+> a, b, c
