change title, interact tags, try new round corners fix

--- a/static/2012.md
+++ b/static/2012.md
@@ -4,8 +4,8 @@
 
 [vimeo](https://player.vimeo.com/video/58010529?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479)
 
-Для систем проектирования инженерных сетей важно в первую очередь получить корректный результат, который не противоречит
-инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
-робототехники.
+Можно сказать, дипломная работа по итогам нескольких лет обучения на форуме GameDev.ru и завершение попыток делать
+проекты на голом энтузиазме. Помогла мне устроится на первую работу. Описание реализации клиент-серверного
+взаимодействия в этом проекте оказалось достаточно, несмотря на нулевое резюме.
 
-> разработка, gamedev
+> разработка, игры
