add old game projects, fix responsive cards

--- a/static/2023.md
+++ b/static/2023.md
@@ -24,14 +24,25 @@
 
 # Запуск разработки игры «Старины»
 
-## 2023-07-23
+## 2023-06-17
+
+![picture](2023/altai-2.jpg)
+
+Несколько лет думал посетить горный Алтай. Природа Алтая уникальна во всех своих проявлениях, и настолько богата
+невероятными пейзажами, что наслаждаться их красотой можно вечно.
+
+> отдых, путешествия
+
+# Запуск разработки игры «Старины»
+
+## 2023-06-15
 
 ![picture](2023/altai.jpg)
 
 Несколько лет думал посетить горный Алтай. Природа Алтая уникальна во всех своих проявлениях, и настолько богата
 невероятными пейзажами, что наслаждаться их красотой можно вечно.
 
-> путешествия
+> отдых, путешествия
 
 # Topc 2
 
