--- a/static/2017.md
+++ b/static/2017.md
@@ -4,7 +4,8 @@
 
 [vimeo](https://player.vimeo.com/video/235624892?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+Очередная попытка модернизировать жанр тактических пошаговых сражений. Отсутствие регулярной сетки, интерактивные и
+квестовые элементы на поле боя, стройная ККИ подобная боевая механика. Впервые использовал покупные ассеты. Это
+значительно упрощает разработку игр на этапе прототипирования.
 
 > разработка, игры
