--- a/static/2023.md
+++ b/static/2023.md
@@ -1,15 +1,3 @@
-# Topic 1
-
-## 2023-09-01
-
-![picture](2023/starines-html.png)
-
-Начал подготовку к созданию новой игры под рабочим названием «Старины». Будет по-настоящему эпичная пошаговая тактика в
-атмосфере славянского фентези: сотни юнитов на поле боя, изменение рельефа и разрушения замков под ударами мощной магии,
-большие монстры помещаются на экран только со стратегического вида.
-
-> разработка, игры
-
 # Запуск разработки игры «Старины»
 
 ## 2023-07-23
@@ -17,75 +5,55 @@
 ![picture](2023/starines-html.png)
 
 Начал подготовку к созданию новой игры под рабочим названием «Старины». Будет по-настоящему эпичная пошаговая тактика в
-атмосфере славянского фентези: сотни юнитов на поле боя, изменение рельефа и разрушения замков под ударами мощной магии,
-большие монстры помещаются на экран только со стратегического вида.
+атмосфере славянского фентези: сотни юнитов на поле боя, изменение рельефа и разрушения замков, большие монстры
+помещаются на экран только со стратегического вида.
 
-> разработка, игры
+> разработка, старины
 
 # Запуск разработки игры «Старины»
 
-## 2023-06-17
+## 2023-06-14
 
 ![picture](2023/altai-2.jpg)
 
-Несколько лет думал посетить горный Алтай. Природа Алтая уникальна во всех своих проявлениях, и настолько богата
-невероятными пейзажами, что наслаждаться их красотой можно вечно.
+TODO: Несколько лет думал посетить горный Алтай. Сейчас частные компании вливают деньги в развитие туризма, поэтому не
+обязательно начинать с диких походов по горам. По реке Катунь расположено много вариантов: от бюджетных турбаз до
+комфортабельных шале с ресторанами питерского уровня.
 
 > отдых, путешествия
 
 # Запуск разработки игры «Старины»
 
-## 2023-06-15
+## 2023-06-13
 
 ![picture](2023/altai.jpg)
 
-Несколько лет думал посетить горный Алтай. Природа Алтая уникальна во всех своих проявлениях, и настолько богата
-невероятными пейзажами, что наслаждаться их красотой можно вечно.
+Несколько лет думал посетить горный Алтай. Сейчас частные компании вливают деньги в развитие туризма, поэтому не
+обязательно начинать с диких походов по горам. По реке Катунь расположено много вариантов: от бюджетных турбаз до
+комфортабельных шале с ресторанами питерского уровня.
 
 > отдых, путешествия
 
-# Topc 2
+# Питч решения на ЛЦТ 2023
 
-## 2023-08-23
-
-[youtube](https://www.youtube.com/embed/qJ16vPIZpqc?si=AgNLJohMoRE9Z976&start=1202)
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-> tag, super
-
-# Topic 3
-
-## 2023-07-14
+## 2023-06-11
 
 [youtube](https://www.youtube.com/embed/qJ16vPIZpqc?si=AgNLJohMoRE9Z976&start=1202)
 
-Для систем проектирования инженерных сетей важно в первую очередь получить корректный результат, который не противоречит
-инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
-робототехники.
+Финал ЛЦТ 2023 проходил в два этапа: в первый день знакомились с экспертами, во второй питч-сессия. Настроение было
+боевое. Другие команды показали очень крутые решения. Мы объективно заняли второе место и были рады этому.
 
-Модель кинематической цепи идеально описывает профиль подключения сантехнического прибора к трассе водоотведения,
-гарантирует точное позиционирование и соосность фитингов и труб. Не менее важным является способ представления системы
-так, чтобы инженеры разной квалификации могли легко и однозначно интерпретировать результаты расчётов.
+> разработка, хакатоны, выступления
 
-Поэтому мы реализовали приложение, в центре которого 3D проекция трассы водоотведения с интерактивными элементами
-управления. Изменение параметров расчёта приводит к обновлению этой проекции в режиме реального времени. В итоге наше
-приложение уменьшает трудоёмкость проектирования сетей водоотведения.
+# Подготовка для ЛЦТ
 
-> разработка, хакатон, выступление, путешествие, игрострой
+## 2023-05-23
 
-# Topic 4
+![gif](2023/pipe.gif)
 
-## 2023-07-21
+Для решения задачи разводки труб канализаии в хакатоне ЛЦТ 2023 использовал инверсную кинематику. Модель кинематической
+цепи идеально описывает профиль подключения сантех приборов к трассе водоотведения, гарантирует точное позиционирование
+и соосность фитингов и труб.
 
-![picture](2023/birds.png)
+> разработка, хакатоны
 
-Для систем проектирования инженерных сетей важно в первую очередь получить корректный результат, который не противоречит
-инженерным и санитарным нормам. Поэтому мы использовали детерминированный алгоритм инверсной кинематики из сферы
-робототехники.
-
-> a, b, c
