finish altai, fix starines picture

--- a/static/2012.md
+++ b/static/2012.md
@@ -8,4 +8,4 @@
 проекты на голом энтузиазме. Помогла мне устроится на первую работу. Описание реализации клиент-серверного
 взаимодействия в этом проекте оказалось достаточно, несмотря на нулевое резюме.
 
-> разработка, игры
+> разработка, игры, портфолио
