--- a/static/2017.md
+++ b/static/2017.md
@@ -8,4 +8,4 @@
 квестовые элементы на поле боя, стройная ККИ подобная боевая механика. Впервые использовал покупные ассеты. Это
 значительно упрощает разработку игр на этапе прототипирования.
 
-> разработка, игры
+> разработка, игры, портфолио
