--- a/static/2021.md
+++ b/static/2021.md
@@ -8,7 +8,7 @@
 второй управляет одним из кораблей, а третий занимается фермерством, обустройством или боевой подготовкой перед высадкой
 на планету.
 
-> разработка, игры
+> разработка, игры, портфолио
 
 # Поездка в Самару
 
@@ -17,7 +17,7 @@
 ![picture](2021/samara.jpg)
 
 Придумали с друзьями новый формат, коворкинг по городам России. В самую обычную рабочую неделю отправились в Самару.
-Прекрасный город: исторические и культурные объекты, потрясающий отель LOTTE, вкусные рестораны и природные красота в
+Прекрасный город: исторические и культурные объекты, отличный отель LOTTE, вкусные рестораны и красивая природа в
 парке «Самарская Лука».
 
 > отдых, путешествия
