add kazan, europe

--- a/static/2018.md
+++ b/static/2018.md
@@ -9,3 +9,15 @@
 свое влияние и власть в стране.
 
 > разработка, игры, портфолио
+
+# Поездка в Европу
+
+## 2018-02-01
+
+![picture](2018/praga.jpeg)
+
+Ничего не планировали с друзьями по работе, сорвались одним вечером и поехали в Европу. Было интересно посмотреть на
+Прагу, Барселону, Турин. Заметил что разговорный английский сильно лучше идёт когда реально хочешь покушать и нужно
+узнать дорогу до кафе в котором у тебя включено питание от гостиницы.
+
+> отдых, путешествия
