--- a/static/2020.md
+++ b/static/2020.md
@@ -17,7 +17,7 @@
 ![picture](2020/innopolis.jpg)
 
 На мой взгляд Казань сейчас в топе IT городов, не в последнюю очередь благодаря Иннополису. Если бы я хотел получить
-высшие образование, то мечтал бы попасть именно сюда. Красивый университет, беспилотные автомобили на дорогах, филиалы
+высшее образование, то мечтал бы попасть именно сюда. Красивый университет, беспилотные автомобили на дорогах, филиалы
 технических компаний.
 
 > отдых, путешествия
