--- a/static/2016.md
+++ b/static/2016.md
@@ -8,4 +8,4 @@
 с узнаваемыми, для любого россиянина, пейзажами. По пути игрок встречает фантастических тварей, продукты деятельности
 советских НИИ, развалины прежнего режима.
 
-> разработка, игры, портфолио
+> разработка, игры
