--- a/static/2018.md
+++ b/static/2018.md
@@ -8,7 +8,7 @@
 создания нового правительства. Игрок участвует в этом действии от лица народной партии, которая стремится распространить
 свое влияние и власть в стране.
 
-> разработка, игры, портфолио
+> разработка, игры
 
 # Поездка в Европу
 
