--- a/static/2021.md
+++ b/static/2021.md
@@ -8,7 +8,7 @@
 второй управляет одним из кораблей, а третий занимается фермерством, обустройством или боевой подготовкой перед высадкой
 на планету.
 
-> разработка, игры, портфолио
+> разработка, игры
 
 # Поездка в Самару
 
