--- a/static/2022.md
+++ b/static/2022.md
@@ -9,3 +9,16 @@
 как-нибудь на нижегородскую ярмарку.
 
 > отдых, путешествия
+
+# Разработка libfmod
+
+## 2022-03-20
+
+[link](https://github.com/lebedec/libfmod)
+![picture](https://opengraph.githubassets.com/6755596e35bb04c518748439fb933e5990803f0434a1f5ac8b041a688f1e4d1a/lebedec/libfmod)
+
+Выбрал Rust для разработки игры. Проблема в том, что экосистема языка ещё молода, большинство решений находятся на
+стадии прототипирования или вовсе отсутствуют. Чтобы закрыть вопрос создания аудио сопровождения для игры, сделал
+библиотеку обёртку для FMOD.
+
+> разработка, OpenSource
