try blog, portfolio modes

--- a/static/2018.md
+++ b/static/2018.md
@@ -20,4 +20,4 @@
 Прагу, Барселону, Турин. Заметил что разговорный английский сильно лучше идёт когда реально хочешь покушать и нужно
 узнать дорогу до кафе в котором у тебя включено питание от гостиницы.
 
-> отдых, путешествия
+> блог, путешествия
