--- a/static/2020.md
+++ b/static/2020.md
@@ -8,7 +8,7 @@
 кремль, коммерческие пространства для туристов и интересная архитектура. Всё это стало началом для моего нового
 увлечения путешествовать по России.
 
-> отдых, путешествия
+> блог, путешествия
 
 # Посещение Иннополиса
 
@@ -20,4 +20,4 @@
 высшее образование, то мечтал бы попасть именно сюда. Красивый университет, беспилотные автомобили на дорогах, филиалы
 технических компаний.
 
-> отдых, путешествия
+> блог, путешествия
