--- a/static/2021.md
+++ b/static/2021.md
@@ -20,4 +20,4 @@
 Прекрасный город: исторические и культурные объекты, отличный отель LOTTE, вкусные рестораны и красивая природа в
 парке «Самарская Лука».
 
-> отдых, путешествия
+> блог, путешествия
