--- a/static/2022.md
+++ b/static/2022.md
@@ -8,7 +8,7 @@
 прогулок. Классный город: обустроенные городские пространства, кремль, крутой ресторан «Экспедиция». В планах попасть
 как-нибудь на нижегородскую ярмарку.
 
-> отдых, путешествия
+> блог, путешествия
 
 # Разработка libfmod
 
