--- a/static/2023.md
+++ b/static/2023.md
@@ -8,7 +8,7 @@
 атмосфере славянского фентези: сотни юнитов на поле боя, изменение рельефа и разрушения замков, большие монстры
 помещаются на экран только со стратегического вида.
 
-> разработка, старины
+> блог, разработка, игры
 
 # Запуск разработки игры «Старины»
 
@@ -20,7 +20,7 @@
 природных пейзажей. Но не обязательно лететь так далеко, в России много мест с подобным эффектом. Горный
 Алатай однозначно в топе.
 
-> отдых, путешествия
+> блог, путешествия
 
 # Запуск разработки игры «Старины»
 
@@ -32,7 +32,7 @@
 обязательно начинать с диких походов по горам. По реке Катунь расположено много вариантов: от бюджетных турбаз до
 комфортабельных шале с ресторанами питерского уровня.
 
-> отдых, путешествия
+> блог, путешествия
 
 # Питч решения на ЛЦТ 2023
 
@@ -43,7 +43,7 @@
 Финал ЛЦТ 2023 проходил в два этапа: в первый день знакомились с экспертами, во второй питч-сессия. Настроение было
 боевое. Другие команды показали очень крутые решения. Мы объективно заняли второе место и были рады этому.
 
-> разработка, хакатоны, выступления
+> разработка, хакатоны
 
 # Подготовка для ЛЦТ
 
