remove blog mode, try map rendering

--- a/static/2023.md
+++ b/static/2023.md
@@ -8,11 +8,13 @@
 атмосфере славянского фентези: сотни юнитов на поле боя, изменение рельефа и разрушения замков, большие монстры
 помещаются на экран только со стратегического вида.
 
-> блог, разработка, игры
+> блог, игры, старины
 
-# Запуск разработки игры «Старины»
+# Природа горного Алтая
 
 ## 2023-06-14
+
+### 51.831444, 85.776563
 
 ![picture](2023/altai-2.jpg)
 
@@ -22,9 +24,11 @@
 
 > блог, путешествия
 
-# Запуск разработки игры «Старины»
+# Путешествие в горный алтай
 
 ## 2023-06-13
+
+### 51.831444, 85.776563
 
 ![picture](2023/altai.jpg)
 
