--- a/static/2017.md
+++ b/static/2017.md
@@ -9,3 +9,13 @@
 значительно упрощает разработку игр на этапе прототипирования.
 
 > разработка, игры
+
+## 2017-05-20
+
+Компания S7 провела хакатон на котором мы делали приложение для совместного выбора авиабилетов через телеграм бот.
+Главной фичей была интерактивность в режиме реального времени, насколько это возможно в рамках работы стандартного
+телеграм виджета сообщений с кнопками.
+
+![picture](2017/s7hack.png)
+
+> разработка, хакатоны
