disable twitter meta tags

--- a/static/2023.md
+++ b/static/2023.md
@@ -8,7 +8,7 @@
 атмосфере славянского фентези: сотни юнитов на поле боя, изменение рельефа и разрушения замков, большие монстры
 помещаются на экран только со стратегического вида.
 
-> блог, игры, старины, test
+> блог, игры, старины
 
 # Природа горного Алтая
 
