--- a/static/2024.md
+++ b/static/2024.md
@@ -1,18 +1,3 @@
-# Архангельск
-
-## 2024-05-20
-
-### 64.539911, 40.515762
-
-![picture](2024/arkhangelsk.jpg)
-
-Архангельск — ворота в Арктику, возможно столица Северного морского пути. 
-Отправились туда чтобы настроиться на решение задачи по навигации атомных ледоколов. 
-Новый отель и отличный ресторанный уровень на набережной и в старой части города, порты, Корела... 
-Всё очень понравилось. 
-
-> блог, путешествия
-
 # Питч решения на ЛЦТ 2024
 
 ## 2024-06-24
@@ -35,5 +20,32 @@
 определение доминант, которые дают согласованное наполнение и выступают в качестве эвристик для алгоритмов оптимизации. 
 Для поиска концептуального решения использовали теорию ТРИЗ.
 
-
 > разработка, хакатоны
+
+# Разработка bumaga
+
+## 2024-06-01
+
+[link](https://github.com/lebedec/bumaga)
+![github](https://opengraph.githubassets.com/0812346995f0526d060f47ccc45519f6c3b8fe4734d48c115cfbe2b6fd42cb4a/lebedec/bumaga)
+
+Разработка UI в играх это всегда отдельный вопрос. Существующие решения на Rust не устраивают в основном потому 
+что реализуют виджет архитектуру и завязаны на использование определенных графических библиотек. 
+К тому же хочется использовать накопленный годами опыт в веб разработке.
+
+> разработка, OpenSource
+
+# Архангельск
+
+## 2024-05-20
+
+### 64.539911, 40.515762
+
+![picture](2024/arkhangelsk.jpg)
+
+Архангельск — ворота в Арктику, возможно столица Северного морского пути. 
+Отправились туда чтобы настроиться на решение задачи по навигации атомных ледоколов. 
+Новый отель и отличный ресторанный уровень на набережной и в старой части города, порты, Корела... 
+Всё очень понравилось. 
+
+> блог, путешествия
